--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
-
 services:
   beef:
     build: .
+    container_name: beef-pro
     ports:
       - "3000:3000"
-    container_name: beef-kali2025
+    restart: unless-stopped
